fix(About Me): :lipstick: Make mobile and print mode more readable.

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -27,12 +27,11 @@ img {
 
 .pair {
   display: flex;
-  flex-wrap: wrap;
   gap: 1rem;
 }
 
 .pair .element {
-  width: 45%;
+  flex: 1;
   padding: 2%;
 }
 
